[tool.poetry]
name = "pyne"
version = "0.1.0"
description = ""
authors = ["Soumasish Goswami <soumasish@datasynth.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
boto3 = "^1.28.73"
pydantic = "^2.4.2"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
pandas = "^2.1.4"
peakutils = "^1.3.4"
scipy = "^1.11.4"
statsmodels = "^0.14.1"
lxml = "^5.0.1"
scikit-learn = "^1.4.0"
pyteomics = "^4.6.3"
pytest-benchmark = "^4.0.0"
matplotlib = "^3.8.3"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
pytest = "^7.4.3"
aws-lambda-typing = "^2.18.0"
moto = {extras = ["s3"], version = "^4.2.7"}
boto3-stubs = {extras = ["s3"], version = "^1.28.78"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["src/pyne"]
